Mon Mar 19 15:05:54 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/test_pty.rb: same as r29280, skip tests when PTY allocation
	  failed (that's not our fault).

Sun Mar 18 23:21:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (aligned_free): fix condition for free.  memalign() and
	  posix_memalign() are not defined together normally.

Sun Mar 18 18:31:45 2012  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* gc.c (aligned_malloc, aligned_free): added fallback implementations
	  for platforms like OSX Leopard.

Sun Mar 18 17:17:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_pow): estimate result bit size more precisely.
	  [ruby-core:30735][Feature #3429]

Sun Mar 18 17:17:36 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (free_method_entry_i): method entry may be in
	  unlinked_method_entry_list.  [ruby-core:43383][Bug #6171]

Sun Mar 18 15:27:31 2012  Tanaka Akira  <akr@fsij.org>

	* compile.c: typo fix by Run Paint Run Run.
	  [ruby-core:28368] [Bug #2824]

Sun Mar 18 10:01:02 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/profiler.rb: support calling singleton methods of
	  an instance of BasicObject.

Sat Mar 17 06:56:58 2012  Eric Hodel  <drbrain@segment7.net>

	* object.c:  Fix indentation of Class#inherited example.

Sat Mar 17 01:46:05 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* string.c (trnext): fix bug with string ending with '\\'.
	  [ruby-dev:45374][Bug #6160]

	* test/ruby/test_string.rb (TestString#test_delete): test for
	  above.

Fri Mar 16 20:06:24 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (trnext): should advance char-wise.
	  [ruby-core:43335][Bug #6156]

Fri Mar 16 17:42:05 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (block_append_gen): fix unreachable warning line number.
	  should warn at the code, not jump.

Fri Mar 16 17:33:08 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_take): allocate buffer array before iteration, as well